--- a/includes/footer.html
+++ b/includes/footer.html
@@ -41,8 +41,8 @@
               <p> <strong>hello@xorainow.com</strong> </p>
 
               <p><strong>Headquarters:</strong><br>Noida, India</p>
-              <p><strong>Delivery Centers:</strong><br>Hyderabad | Noida</p>
-              <p> <strong>Client Offices:</strong><br>Dubai, UAE | United States</p>
+              <p><strong>Delivery Centers:</strong><br>Hyderabad | Guwahati</p>
+              <p> <strong>Client Offices:</strong><br>Dubai, Riyadh ,UAE | New York, San Diego, United States</p>
                
             </div>
           </div>
