--- a/includes/header.html
+++ b/includes/header.html
@@ -1,59 +1,59 @@
   <div class="topbar">
       <div class="">
         <div class="header">
-          <h1><a href="https://xorai-html.vercel.app/index.html"><img src="https://xorai-html.vercel.app/images/logo.png" alt="XoraiNow" class="logo"></a></h1>
+          <h1><a href="https://xorainow.com/index.html"><img src="https://xorainow.com/images/logo.png" alt="XoraiNow" class="logo"></a></h1>
 <div class="hamburger" id="menuToggle">
     <i class="ri-menu-line"></i>
   </div>
           <nav id="mainNav">
             <ul class="menu flex align-items-center">
               <li class="dropdown">
-                <a href="https://xorai-html.vercel.app/industries/index.html">Industries <i class="ri-arrow-down-s-line"></i></a>
+                <a href="https://xorainow.com/industries/index.html">Industries <i class="ri-arrow-down-s-line"></i></a>
                 <ul class="submenu">
-                  <li><a href="https://xorai-html.vercel.app/industries/financial-services.html">Financial Services</a></li>
-                  <li><a href="https://xorai-html.vercel.app/industries/retail.html">Retail</a></li>
-                  <li><a href="https://xorai-html.vercel.app/industries/healthcare.html">Healthcare</a></li>
-                  <li><a href="https://xorai-html.vercel.app/industries/energy.html">Energy</a></li>
-                  <li><a href="https://xorai-html.vercel.app/industries/education.html">Education</a></li>
+                  <li><a href="https://xorainow.com/industries/financial-services.html">Financial Services</a></li>
+                  <li><a href="https://xorainow.com/industries/retail.html">Retail</a></li>
+                  <li><a href="https://xorainow.com/industries/healthcare.html">Healthcare</a></li>
+                  <li><a href="https://xorainow.com/industries/energy.html">Energy</a></li>
+                  <li><a href="https://xorainow.com/industries/education.html">Education</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="https://xorai-html.vercel.app/solutions/index.html">Solutions <i class="ri-arrow-down-s-line"></i></a>
+                <a href="https://xorainow.com/solutions/index.html">Solutions <i class="ri-arrow-down-s-line"></i></a>
                 <ul class="submenu">
-                  <li><a href="https://xorai-html.vercel.app/solutions/it.html">IT Service Management (ITSM)</a></li>
-                  <li><a href="https://xorai-html.vercel.app/solutions/crm.html">Customer Relationship Management (CRM)</a></li>
-                  <li><a href="https://xorai-html.vercel.app/solutions/hr.html">HR Service Delivery (HRSD)</a></li>
-                  <li><a href="https://xorai-html.vercel.app/solutions/security-risk.html">Security & Risk (GRC)</a></li>
-                  <li><a href="https://xorai-html.vercel.app/solutions/finance.html">Finance & Operations</a></li>
-                  <li><a href="https://xorai-html.vercel.app/solutions/supply-chain.html">Supply Chain Management</a></li>
+                  <li><a href="https://xorainow.com/solutions/it.html">IT Service Management (ITSM)</a></li>
+                  <li><a href="https://xorainow.com/solutions/crm.html">Customer Relationship Management (CRM)</a></li>
+                  <li><a href="https://xorainow.com/solutions/hr.html">HR Service Delivery (HRSD)</a></li>
+                  <li><a href="https://xorainow.com/solutions/security-risk.html">Security & Risk (GRC)</a></li>
+                  <li><a href="https://xorainow.com/solutions/finance.html">Finance & Operations</a></li>
+                  <li><a href="https://xorainow.com/solutions/supply-chain.html">Supply Chain Management</a></li>
                 </ul>
               </li>
-              <li class="dropdown"><a href="https://xorai-html.vercel.app/services/index.html">Services <i class="ri-arrow-down-s-line"></i></a>
+              <li class="dropdown"><a href="https://xorainow.com/services/index.html">Services <i class="ri-arrow-down-s-line"></i></a>
 
                 <ul class="submenu">
-                  <li><a href="https://xorai-html.vercel.app/services/implementation.html">Implementation</a></li>
-                  <li><a href="https://xorai-html.vercel.app/services/consulting.html">Consulting</a></li>
-                  <li><a href="https://xorai-html.vercel.app/services/staffing.html">Staffing</a></li>
-                  <li><a href="https://xorai-html.vercel.app/services/training.html">Training</a></li>
+                  <li><a href="https://xorainow.com/services/implementation.html">Implementation</a></li>
+                  <li><a href="https://xorainow.com/services/consulting.html">Consulting</a></li>
+                  <li><a href="https://xorainow.com/services/staffing.html">Staffing</a></li>
+                  <li><a href="https://xorainow.com/services/training.html">Training</a></li>
                 </ul>
               </li>
-              <li class="dropdown"><a href="https://xorai-html.vercel.app/resources/index.html">Resources <i class="ri-arrow-down-s-line"></i></a>
+              <li class="dropdown"><a href="https://xorainow.com/resources/index.html">Resources <i class="ri-arrow-down-s-line"></i></a>
                 <ul class="submenu">
-                  <li><a href="https://xorai-html.vercel.app/resources/blogs.html">Blogs</a></li>
-                  <li><a href="https://xorai-html.vercel.app/resources/documents.html">Documents</a></li>
+                  <li><a href="https://xorainow.com/resources/blogs.html">Blogs</a></li>
+                  <li><a href="https://xorainow.com/resources/documents.html">Documents</a></li>
                 </ul>
               </li>
-              <li class="dropdown"><a href="https://xorai-html.vercel.app/company/index.html">Company <i class="ri-arrow-down-s-line"></i></a>
+              <li class="dropdown"><a href="https://xorainow.com/company/index.html">Company <i class="ri-arrow-down-s-line"></i></a>
                 <ul class="submenu">
-                  <li><a href="https://xorai-html.vercel.app/company/about.html">About Us</a></li>
-                  <li><a href="https://xorai-html.vercel.app/company/events.html">Events</a></li>
-                  <li><a href="https://xorai-html.vercel.app/company/careers.html">Careers</a></li>
+                  <li><a href="https://xorainow.com/company/about.html">About Us</a></li>
+                  <li><a href="https://xorainow.com/company/events.html">Events</a></li>
+                  <li><a href="https://xorainow.com/company/careers.html">Careers</a></li>
                 </ul>
               </li>
             </ul>
           </nav>
 
-          <a href="https://xorai-html.vercel.app/contact.html" class="btn btn-green">Let's talk <i class="ri-smartphone-line"></i></a>
+          <a href="https://xorainow.com/contact.html" class="btn btn-green">Let's talk <i class="ri-smartphone-line"></i></a>
         </div>
       </div>
     </div>
