--- a/includes/footer.html
+++ b/includes/footer.html
@@ -4,35 +4,35 @@
         <div class="container">
           <div>
             <h4>Ready to Build the Agentic Enterprise?</h4>
-            <a href="https://xorai-html.vercel.app/contact.html" class="btn btn-green mt-3">Let's Talk <i class="ri-arrow-right-line"></i></a>
+            <a href="https://xorainow.com/contact.html" class="btn btn-green mt-3">Let's Talk <i class="ri-arrow-right-line"></i></a>
           </div>
  
           <div class="row ftmenu">
 
            
             <div class="col-md-3">
-            <img src="https://xorai-html.vercel.app/images/logo.png" class="btmlogo"></div>
+            <img src="https://xorainow.com/images/logo.png" class="btmlogo"></div>
             <div class="col-md-3">
               <h5>Industries</h5>
               <ul>
               
-                <li><a href="https://xorai-html.vercel.app/industries/financial-services.html"><i class="ri-arrow-right-line"></i> Financial Services</a></li>
-                <li><a href="https://xorai-html.vercel.app/industries/retail.html"><i class="ri-arrow-right-line"></i> Retail</a></li>
-             <li><a href="https://xorai-html.vercel.app/industries/healthcare.html"><i class="ri-arrow-right-line"></i> Healthcare</a></li>           
-                         <li><a href="https://xorai-html.vercel.app/industries/energy.html"><i class="ri-arrow-right-line"></i> Energy</a></li>
-            <li><a href="https://xorai-html.vercel.app/industries/education.html"><i class="ri-arrow-right-line"></i> Education</a></li>
+                <li><a href="https://xorainow.com/industries/financial-services.html"><i class="ri-arrow-right-line"></i> Financial Services</a></li>
+                <li><a href="https://xorainow.com/industries/retail.html"><i class="ri-arrow-right-line"></i> Retail</a></li>
+             <li><a href="https://xorainow.com/industries/healthcare.html"><i class="ri-arrow-right-line"></i> Healthcare</a></li>           
+                         <li><a href="https://xorainow.com/industries/energy.html"><i class="ri-arrow-right-line"></i> Energy</a></li>
+            <li><a href="https://xorainow.com/industries/education.html"><i class="ri-arrow-right-line"></i> Education</a></li>
                            
               </ul>
             </div>
             <div class="col-md-3">
               <h5>Solutions</h5>
               <ul>
-                <li><a href="https://xorai-html.vercel.app/solutions/it.html"><i class="ri-arrow-right-line"></i> IT Service Management</a></li>
-                <li><a href="https://xorai-html.vercel.app/solutions/crm.html"><i class="ri-arrow-right-line"></i> CRM</a></li>
-                <li><a href="https://xorai-html.vercel.app/solutions/hr.html"><i class="ri-arrow-right-line"></i> HR Service Delivery</a></li>
-                <li><a href="https://xorai-html.vercel.app/solutions/security-risk.html"><i class="ri-arrow-right-line"></i> Security & Risk</a></li>
-                <li><a href="https://xorai-html.vercel.app/solutions/finance.html"><i class="ri-arrow-right-line"></i> Finance & Operations</a></li>
-                <li><a href="https://xorai-html.vercel.app/solutions/supply-chain.html"><i class="ri-arrow-right-line"></i> Supply Chain</a></li>
+                <li><a href="https://xorainow.com/solutions/it.html"><i class="ri-arrow-right-line"></i> IT Service Management</a></li>
+                <li><a href="https://xorainow.com/solutions/crm.html"><i class="ri-arrow-right-line"></i> CRM</a></li>
+                <li><a href="https://xorainow.com/solutions/hr.html"><i class="ri-arrow-right-line"></i> HR Service Delivery</a></li>
+                <li><a href="https://xorainow.com/solutions/security-risk.html"><i class="ri-arrow-right-line"></i> Security & Risk</a></li>
+                <li><a href="https://xorainow.com/solutions/finance.html"><i class="ri-arrow-right-line"></i> Finance & Operations</a></li>
+                <li><a href="https://xorainow.com/solutions/supply-chain.html"><i class="ri-arrow-right-line"></i> Supply Chain</a></li>
               </ul>
             </div>
 
