Chat and form updated

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -50,4 +50,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://js.chatlio.com/widget.js" async></script>
+
+<chatlio-widget widgetid="8734e60c-1401-4791-5859-d44a36bff398"></chatlio-widget>
 
